--- a/css/style.css
+++ b/css/style.css
@@ -81,3 +81,75 @@ margin-top: 50px;
     box-shadow:0px 0px 10px 0px #fff;
     
 }
+
+/* 
+form{
+    margin: auto;
+    text-align: left;
+}
+form .field{
+ margin: 10px;
+}
+label{
+    width: 250px;
+}
+form .field > input, form .field> textarea {
+    width: 250px;
+    border-radius: 5px;
+    margin-left: 40px ;
+    padding: 5px
+}
+form button{
+        width: 100px;
+        padding: 10px;
+        border: none;
+        border-radius: 5px;
+        background-color: #0D6EFD;
+        margin: 10px 10px 0px 0px;
+        color:#fff ;
+       
+} */
+
+form {
+    /* display: flex; */
+    /* flex-direction: column; */
+  }
+  
+  .form-group {
+    margin-bottom: 15px;
+  }
+  
+  label {
+    font-weight: bold;
+    width: 25%;
+  }
+  
+  input[type="text"],
+  input[type="email"],
+  textarea {
+    width: 70%;
+    padding: 8px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+  }
+  button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    background-color: #4caf50;
+    color: white;
+    cursor: pointer;
+    font-size: 16px;
+  }
+  
+  .gender-group {
+    display: flex;
+    justify-content:flex-start
+  }
+  
+.gender-group label {
+    margin-right: 25px;
+  }
+  button:hover {
+    background-color: #45a049;
+  }
