--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ body{
 .services > .row{
 margin-top: 50px;
 }
-.services .box{
+.services .box {
     width: 30%;
     flex-grow: 1;
     border: 2px solid #f2f2f2;
@@ -81,38 +81,16 @@ margin-top: 50px;
     box-shadow:0px 0px 10px 0px #fff;
     
 }
-
-/* 
-form{
-    margin: auto;
-    text-align: left;
+footer{
+    background-color: #F8F9FA;
 }
-form .field{
- margin: 10px;
+footer .box{
+    width: 25%;
+    flex-grow: 1;
+    padding: 30px 5px;
 }
-label{
-    width: 250px;
-}
-form .field > input, form .field> textarea {
-    width: 250px;
-    border-radius: 5px;
-    margin-left: 40px ;
-    padding: 5px
-}
-form button{
-        width: 100px;
-        padding: 10px;
-        border: none;
-        border-radius: 5px;
-        background-color: #0D6EFD;
-        margin: 10px 10px 0px 0px;
-        color:#fff ;
-       
-} */
-
 form {
-    /* display: flex; */
-    /* flex-direction: column; */
+  margin-top: 20px;
   }
   
   .form-group {
@@ -153,3 +131,8 @@ form {
   button:hover {
     background-color: #45a049;
   }
+  footer ul > li{
+    text-decoration: none;
+    list-style-type: none;
+    margin-top:5px ;
+}
