--- a/css/style.css
+++ b/css/style.css
@@ -81,9 +81,7 @@ margin-top: 50px;
     box-shadow:0px 0px 10px 0px #fff;
     
 }
-footer{
-    background-color: #F8F9FA;
-}
+
 footer .box{
     width: 25%;
     flex-grow: 1;
@@ -135,4 +133,14 @@ form {
     text-decoration: none;
     list-style-type: none;
     margin-top:5px ;
+}
+footer h4{
+    text-align: center;
+}
+.footer{
+    background-color: #f2f2f2;
+}
+.last-footer{
+    padding: 20px;
+    background-color: #F8F9FA;
 }
